# dtimelog

./: .pre-commit-config.yaml  Cargo.toml  WORKSPACE.bazel  deny.toml
dtimelog_cli/: BUILD.bazel  Cargo.toml  README.md
dtimelog_cli/src/: main.rs
dtimelog_gui/: BUILD.bazel  Cargo.toml  README.md  main.cc
dtimelog_gui/src/: main.rs
dtimelog_lib/: BUILD.bazel  Cargo.toml  README.md
dtimelog_lib/src/: greeter.rs
