[package]
name = "dtimelog_lib"
version = "0.1.0"
edition = "2021"
license="MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" ] }
plotters = "0.3.1"
chrono = "0.4.23"
